--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Jason's Number - API Hack</title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="js/app.js"></script>
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,700' rel='stylesheet' type='text/css'>
 	<link href="css/reset.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
@@ -13,7 +12,7 @@
     <h2>An API Hack for Twitter<h2>
 	<h3>This web application will tell you how many times people tweet a number.</h3>
 	<h3>Just have your friends tweet the number 23 after the hashtag</h3> <h4>#jasonnumber</h4>
-	<h3>Then see the results below.</h3>	
+	<h3>Then see the results below.</h3>
       <div id="numberGuess">
       	<h6>23</h6>
       	<h3>was tweeted</h3>
@@ -24,6 +23,11 @@
       	<h6>27</h6>
       <h3>times</h3>
       </div>
+			<h3>Last 5 Twitter posts using hastag #Caturday, including images (if any)</h3>
+			<div id="example1"></div>
+	<script type="text/javascript" src="js/twitterFetcher_min.js"></script>
+	<script type="js/app.js"></script>
 
-  </body>
+	</body>
+
 </html>
