Fixed the User ID for the Twitter Widget
Ok, now I know what I was missing. Had to set up the widget correctly
as what the instructions say to do.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
   <body>
-    <h1>Jason's Number</h1>
-    <h2>An API Hack for Twitter<h2>
+  <h1>Jason's Number</h1>
+  <h2>An API Hack for Twitter<h2>
 	<h3>This web application will tell you how many times people tweet a number.</h3>
 	<h3>Just have your friends tweet the number 23 after the hashtag</h3> <h4>#jasonnumber</h4>
 	<h3>Then see the results below.</h3>
@@ -23,8 +23,9 @@
       	<h6>27</h6>
       <h3>times</h3>
       </div>
-			<h3>Last 5 Twitter posts using hastag #Caturday, including images (if any)</h3>
+			<h3>Last 5 Twitter posts using hastag #jasonnumber</h3>
 			<div id="example1"></div>
+			
 	<script type="text/javascript" src="js/twitterFetcher_min.js"></script>
 	<script type="js/app.js"></script>
 
